# Parallel-technologies-comparisons-MPI_VS_SYCL

./: .gitignore  README.md
Godugu_Anil_MPI/: benchmark_parallel.sh  euler_parallel_mpi.c  euler_totient2.c  euler_totient_mpi  mpi_bench.csv  runtim3.csv  runtime1.csv  runtime2.csv  runtime_100.csv  runtime_15.csv  runtime_30.csv  runtime_parallel.csv  runtime_parallel1.csv  runtime_parallel100000.csv  runtime_parallel15000.csv  runtime_parallel30000.csv
PORCHER_Jeanne_SYCL/: README.md  TotientRange.c  plots.py
PORCHER_Jeanne_SYCL/sycl/: CMakeLists.txt  syclTotient.cpp
